--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "properties-reader": "^0.0.16",
     "mysql2": "^1.5.3",
     "sequelize": "^4.37.6",
+    "sequelize-cli": "^4.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "body-parser": "^1.18.2",
     "bcrypt-nodejs": "^0.0.3",
     "express-handlebars": "^3.0.0",
     "fs": "^0.0.1-security",
-    "cron": "^1.3.0"
+    "cron": "^1.3.0",
+    "redis": "^2.8.0",
+    "dateformat": "^3.0.3"
   }
 }
