--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fs": "^0.0.1-security",
     "cron": "^1.3.0",
     "redis": "^2.8.0",
-    "dateformat": "^3.0.3"
+    "dateformat": "^3.0.3",
+    "elasticsearch": "^15.0.0"
   }
 }
