config file. change on efsms. changes on config and history page.

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,6 @@ typings/
 
 /MINT.iml
 .idea/inspectionProfiles/
-config/config.json
 public/images/
 /routes/elasticSearchTest.js
+/config/config.json
