--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "start:dev": "SET NODE_ENV=development & node ./bin/www",
+    "start:prod": "SET NODE_ENV=production & node ./bin/www",
+    "start:test": "SET NODE_ENV=test & node ./bin/www"
   },
   "engines": {
     "node": "^8.9.4"
@@ -15,7 +18,6 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "properties-reader": "^0.0.16",
     "mysql2": "^1.5.3",
     "sequelize": "^4.37.6",
     "sequelize-cli": "^4.0.0",
